--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Evelina",
   "license": "MIT",
   "dependencies": {
+    "nuka-carousel": "^2.2.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
