--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "react-icons-kit": "^1.0.7",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
   }
